<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".KarteAnzeigen.KarteAnzeige"
    android:focusableInTouchMode="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:id="@+id/activity_karte_erstellen_ViewCardColor"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/cardColorLime"
        android:layout_width="12dp"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/activity_karte_erstellen_RelativeLayoutTop"
        android:layout_toRightOf="@+id/activity_karte_erstellen_ViewCardColor"
        android:layout_toEndOf="@+id/activity_karte_erstellen_ViewCardColor"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/activity_karte_erstellen_TextViewBack"
            android:drawablePadding="10dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="@dimen/h4"
            android:text="@string/back"
            android:drawableStart="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/activity_karte_erstellen_TextViewChangeColor"
            android:gravity="center_vertical"
            android:layout_alignTop="@+id/activity_karte_erstellen_TextViewBack"
            android:layout_alignBottom="@+id/activity_karte_erstellen_TextViewBack"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:drawablePadding="10dp"
            android:textColor="@color/cardColorLime"
            android:textStyle="bold"
            android:textSize="@dimen/h5"
            android:text="@string/changeColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <View
        android:id="@+id/activity_karte_erstellen_ViewDivider"
        android:layout_below="@+id/activity_karte_erstellen_RelativeLayoutTop"
        android:background="@drawable/shadow_line_top_to_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <ScrollView
        android:layout_below="@+id/activity_karte_erstellen_ViewDivider"
        android:layout_above="@+id/activity_karte_erstellen_ButtonFertig"
        android:layout_toEndOf="@+id/activity_karte_erstellen_ViewCardColor"
        android:layout_toRightOf="@+id/activity_karte_erstellen_ViewCardColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="@dimen/h1"
                android:text="@string/liste"
                android:textSize="@dimen/h4"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_karte_erstellen_TextViewListChoose"
                android:layout_marginTop="@dimen/h6"
                android:background="@drawable/edittext_search"
                android:padding="8dp"
                android:textSize="@dimen/h4"
                android:hint="@string/listeAuswahlen"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_marginTop="@dimen/h1"
                android:text="@string/aufgabe"
                android:textSize="@dimen/h4"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <esaph.filing.Utils.ShowMoreEdittext.EsaphShowMoreEditText
                android:id="@+id/activity_karte_erstellen_EditTextAufgabe"
                android:padding="8dp"
                app:trimLength="100"
                app:trimMode="1"
                android:background="@drawable/filing_edittext_selector"
                android:layout_marginTop="@dimen/h6"
                android:hint="@string/aufgabeHint"
                android:text="Aufgabe die erledigt werden soll"
                android:textSize="@dimen/h4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/h1"
                android:text="@string/beschreibung"
                android:textSize="@dimen/h4"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <esaph.filing.Utils.ShowMoreEdittext.EsaphShowMoreEditText
                android:id="@+id/activity_karte_erstellen_EditTextBeschreibung"
                app:trimLength="200"
                app:trimMode="1"
                android:padding="8dp"
                android:background="@drawable/filing_edittext_selector"
                android:layout_marginTop="@dimen/h6"
                android:gravity="top"
                android:hint="@string/beschreibungHint"
                android:text="Dies ist die Aufgabe, du musst das und das machen damit es klappt. Ansonsten wird darauß nichts."
                android:textSize="@dimen/h4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/h1"
                android:text="@string/kunde"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/h4"
                android:textStyle="bold" />

            <include layout="@layout/item_contact_search_layout" />

            <TextView
                android:layout_marginTop="@dimen/h1"
                android:text="@string/terminDatum"
                android:textSize="@dimen/h4"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_karte_erstellen_TextViewFrist"
                android:layout_marginBottom="@dimen/h1"
                android:background="@drawable/edittext_search"
                android:layout_marginTop="@dimen/h6"
                android:padding="8dp"
                android:text="@string/fristDatumAuswaehlen"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/activity_karte_erstellen_ButtonFertig"
        android:textSize="@dimen/h4"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        android:text="@string/auftragErstellen"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>