<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".KarteAnzeigen.KarteAnzeige">


    <RelativeLayout
        android:id="@+id/activity_board_managment_bearbeiten_erstellen_RelativeLayoutTop"
        android:paddingRight="16dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/activity_board_managment_bearbeiten_erstellen_TextViewBack"
            android:drawablePadding="10dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="@dimen/h4"
            android:text="@string/board_aktualisieren"
            android:drawableStart="@drawable/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </RelativeLayout>


    <View
        android:id="@+id/activity_board_managment_bearbeiten_erstellen_ViewDivider"
        android:layout_below="@+id/activity_board_managment_bearbeiten_erstellen_RelativeLayoutTop"
        android:background="@drawable/shadow_line_top_to_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp" />


    <LinearLayout
        android:layout_marginTop="@dimen/h3"
        android:layout_below="@+id/activity_board_managment_bearbeiten_erstellen_ViewDivider"
        android:layout_above="@+id/activity_board_managment_bearbeiten_erstellen_ButtonFertig"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/activity_board_managment_bearbeiten_erstellen_EditTextBoardName"
            android:maxLength="30"
            android:background="@null"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:hint="@string/board_name_eingeben"
            android:textSize="@dimen/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_marginTop="@dimen/h3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_board_managment_bearbeiten_erstellen_TextViewFarbpallette"
                android:background="@drawable/filing_edittext_normal"
                android:textSize="@dimen/h5"
                android:padding="9dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/farbPaletteKonfigurieren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>


        <TextView
            android:layout_marginTop="@dimen/h1"
            android:text="@string/sichtbarkeitsmodus"
            android:textSize="@dimen/h4"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <Spinner
            android:id="@+id/activity_board_managment_bearbeiten_erstellen_SpinnerPrivacy"
            android:layout_marginTop="@dimen/h6"
            tools:listitem="@layout/item_sichtbarkeitsmodus"
            android:textColor="#777777"
            android:text="Aufgabe die erledigt werden soll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_marginTop="@dimen/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mitglieder"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/h4"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_board_managment_bearbeiten_erstellen_TextViewAddTeilnehmer"
                android:layout_centerVertical="true"
                android:textAlignment="center"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addTeilnehmer"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/h5"
                android:textStyle="bold" />

        </RelativeLayout>



        <GridView
            android:id="@+id/activity_board_managment_bearbeiten_erstellen_GridViewMitglieder"
            android:layout_marginTop="@dimen/h6"
            tools:listitem="@layout/item_mitglied"
            android:numColumns="auto_fit"
            android:gravity="start"
            android:columnWidth="100dp"
            android:stretchMode="columnWidth"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        </GridView>

    </LinearLayout>


    <Button
        android:id="@+id/activity_board_managment_bearbeiten_erstellen_ButtonFertig"
        android:padding="8dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:textSize="@dimen/h4"
        android:layout_margin="@dimen/h2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@android:color/white"
        android:background="@drawable/button_fertig_enabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>